refactor: actualizar coordenadas a UTM y agregar nuevas medidas en la API de tiendas
